--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ flyway.user=databaseUser
 flyway.password=databasePassword
 flyway.schemas=app-db
 flyway.url=jdbc:h2:mem:db
+
+server.error.whitelabel.enabled=false
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
